<resources>
    <string name="app_name">TaskController</string>

    <!--        Generics-->
    <string name="text_email">E-mail</string>
    <string name="text_password">Senha</string>
    <string name="text_hint">email@email.com</string>
    <string name="text_create_account">Criar Conta</string>
    <string name="error_unexpected">Ocorreu um erro, tente novamente mais tarde.</string>
    <string name="text_new_task">Nova Tarefa</string>

    <!--    Login Fragment-->

    <string name="text_btn_login_fragment">Entrar</string>
    <string name="text_recover_password_login_fragment">Recuperar Senha</string>

    <!--    Create Account Fragment-->

    <string name="text_password_repeat_create_account_fragment">Repita sua senha</string>

    <!--    Recover Account Fragment-->
    <string name="text_title_recover_account_fragment">Recuperar Conta</string>
    <string name="text_description_recover_account_fragment">Informe seu e-mail para receber um link de alteração de senha</string>
    <string name="text_btn_recover_account_fragment">Enviar</string>
    <string name="loanding_task">Carregando tarefas...</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="acess_temporarily_blocked">Acesso bloqueado, tente novamente mais tarde</string>
    <string name="password_should_little_caracters">Senha deve conter no mínimo 6 Caracteres</string>

    <!--Form Task Fragmkent-->
    <string name="text_title_descripition_form_task">Descrição</string>
    <string name="text_status_form_task">Nova Tarefa</string>
    <string name="hint_new_task">Digite uma nova tarefa</string>
    <string name="hint_description_new_task">Digite uma descrição</string>
    <string name="new_task_todo">A Fazer</string>
    <string name="new_task_doing">Fazendo</string>
    <string name="new_task_done">Feito</string>
    <string name="new_task_save_btn">Salvar</string>


</resources>