<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="20dp">

        <TextView
            android:text="@string/text_email"

            style="@style/style_text_view_information_fields"/>

        <EditText
            android:id="@+id/txtEmail"
            android:hint="@string/text_hint"
            style="@style/style_et_email" />

        <TextView
            android:text="@string/text_password"
            android:layout_marginTop="14dp"

            style="@style/style_text_view_information_fields" />

        <EditText
            android:id="@+id/txtSenha"
            android:hint="*******"
            style="@style/style_et_password" />

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/text_btn_login_fragment"
            app:backgroundTint="@null"

            style="@style/style_btn" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtCriarConta"
                android:text="@string/text_create_account"
                style="@style/style_txt_create_and_recuver_account" />
            <TextView
                android:id="@+id/txtRecuperarSenha"
                android:text="@string/text_recover_password_login_fragment"
                style="@style/style_txt_create_and_recuver_account"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressbarLogin"
            tools:visibility="visible"

            style="@style/style_progressbar" />
    </LinearLayout>



</ScrollView>