<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_default"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_create_account"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"

            style="@style/linear_layout_designer">

            <TextView
                android:text="@string/text_email"
                style="@style/style_text_view_information_fields" />
            <EditText
                android:id="@+id/edtEmail"
                android:hint="@string/text_hint"

                style="@style/style_et_email"/>

            <TextView
                android:layout_marginTop="14dp"
                android:text="@string/text_password"
                style="@style/style_text_view_information_fields"/>

            <EditText
                android:id="@+id/edtPassword"
                android:hint="*******"

                style="@style/style_et_password"/>
            <TextView
                android:layout_marginTop="14dp"
                android:text="@string/text_password_repeat_create_account_fragment"
                style="@style/style_text_view_information_fields"/>

            <EditText
                android:id="@+id/edtPasswordRepiti"
                android:hint="*******"

                style="@style/style_et_password" />

            <Button
                android:id="@+id/btnCriarConta"
                app:backgroundTint="@null"
                android:text="@string/text_create_account"

                style="@style/style_btn"
                 />

            <ProgressBar
                android:id="@+id/pbCreateAccount"
                tools:visibility="visible"

                style="@style/style_progressbar"/>
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>